# scaffolding_python

./: .gitignore  README.md  poetry.toml  pyproject.toml
scaffolding_python/: __init__.py  error_handling_example.py
scaffolding_python/api/: dependencies.py
scaffolding_python/api/routers/: items.py
scaffolding_python/combinations_coins/: __main__.py
scaffolding_python/configs/: config_logger.py
scaffolding_python/decorators/: error_handling.py
scaffolding_python/fibonacci_exercise/: __main__.py
scaffolding_python/opencensus/: logs.py
src/: __init__.py  error_handling_example.py
src/api/: __init__.py
src/combinations_coins/: __main__.py  combination_coins.py
src/fibonacci_exercise/: __main__.py  fibonacci.py
src/opencensus/: custom_event.py
tests/: test_coins.py  test_fibonacci.py
