[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["eduardo.zapata <eduardo.zapata@wayops.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
opencensus-ext-azure = "^1.1.9"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pdbp = "^1.4.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "src.script_for_toml:start"
coins = "src.combinations_coins.__main__:start"
fibonacci = "src.fibonacci_exercise.__main__:start"
